# graphjoin

./: README.md  README_sql.md  my_benchmarks.R  plot_benchmarks.R  virtuoso_dependencies.sh
databaseMappings3/: BitArray1D.cpp  BitArray1D.h  CMakeLists.txt  conf.txt  graph_sampler.cpp  indexing.cpp  main.cpp  print_graph.cpp  run_eq_join.sh  serializer.cpp  statistics.cpp  virtuoso_joiner.cpp  virtuoso_loader.cpp
databaseMappings3/hashing/: hashing.cpp  hashing.h
databaseMappings3/operations/bulk/: bulk_fusion.cpp  bulk_fusion.h
databaseMappings3/operations/eqjoin/: eq_conj_join.cpp  eq_conj_join.h  eq_conj_join_for_bulks.cpp  eq_conj_join_for_bulks.h  eq_disj_join.cpp  eq_disj_join.h  eq_join_proposed.cpp  eq_join_proposed.h
databaseMappings3/operations/utils/: query.cpp  query.h  query_chunk.cpp  query_chunk.h  store_join_results.cpp  store_join_results.h
databaseMappings3/operators/: generate.sh
databaseMappings3/serializer/: HashIndexArrayField.h  VAOffsetStructures.h  VertexIndexArrayField.h  csvSerialize.cpp  csvSerialize.h  entry.cpp  entry.h  mappers.cpp  mappers.h  serializers.cpp  serializers.h
databaseMappings3/virtuoso/: SampleVirtuoso.cpp  SampleVirtuoso.h  Virtuoso.cpp  Virtuoso.h  VirtuosoGraph.cpp  VirtuosoGraph.h  VirtuosoQuery.cpp  VirtuosoQuery.h  test.cpp
databaseMappings3/virtuoso/utils/: SchemaValues.h  triplets.c
odbc_setup_default_package/: cpfiles.sh  odbcinst.ini
sampling/: friendster.R
usergenerator/: conf.properties  conf.txt  graph_sampler.cpp  pom.xml  sample_kronecker_dataset.properties  sampler_chain.properties  sampler_chain2.properties  sampler_chain_sql.properties
usergenerator/certificates/: neo4j.cert  neo4j.key
usergenerator/src/main/java/CGEA/: DatasetSampleGenerator.java  RunPostgresqlTests.java  Serializer.java
usergenerator/src/main/java/CGEA/withReflection/dbms/: ConnectionBridge.java  Database.java
usergenerator/src/main/java/CGEA/withReflection/dbms/rdbms/: DBMSInterface.java  DBMSInterfaceFactory.java  PostgreSQL.java
usergenerator/src/main/java/CGEA/withReflection/model/: JOOQDataTypes.java  SQLType.java  Table.java  UniqueIndex.java
usergenerator/src/main/java/Neo4J/: BenchmarkNeo4JQueryOverSamples.java  CypherQueryCompiler.java  LoadNeo4JOperands.java  Neo4JEdge.java  Neo4JGraph.java  Neo4JVertex.java
usergenerator/src/main/java/Neo4J/general/: AbstractGraph.java  AbstractNode.java  GeneralEdge.java  GoogleGraphVertex.java  INeigh.java  INeighVertex.java
usergenerator/src/main/java/Neo4J/general/pointer/: GraphBulkBinPointer.java  GraphIdPointerApint.java  GraphIdPointerLong.java  Pointer.java  PointerGeneral.java  UniqueGenerator.java
usergenerator/src/main/java/it/giacomobergami/usergenerator/: CreateVertexFilesFromEdges.java  UserCSV.java
usergenerator/src/main/java/it/giacomobergami/usergenerator/classes/: User.java
usergenerator/src/main/java/it/giacomobergami/usergenerator/generators/: FileGenerator.java  Generator.java  RandomCompany.java  RandomDateOfBirth.java  RandomEMail.java  RandomName.java  RandomResidence.java  RandomSex.java  RandomSurname.java  UserGenerator.java
usergenerator/src/main/java/it/giacomobergami/usergenerator/utils/: CSVUtil.java  Configurations.java  LoadProperty.java  RandomWithJump.java  Resources.java
usergenerator/src/main/java/it/giacomobergami/utils/: BenchmarkClass.java  BinaryPredicate.java  DoubleHashObjects.java  Runners.java
usergenerator/src/main/java/it/giacomobergami/utils/datastructures/: Pair.java  (+3 more)
usergenerator/src/main/resources/: all_names_female.txt  all_names_male.txt  all_surnames.txt  business-names.txt  email.txt
virtuoso_setup/: db_original_folder  virt_start.sh  virtuoso.ini
(+24 files in other folders)
